<resources>
    <string name="app_name">Restaurateur</string>
    <string name="photo">Photo</string>
    <string name="cust_name">Name</string>
    <string name="cust_type">Food type</string>
    <string name="cust_addr">Restaurant address</string>
    <string name="cust_tel">Telephone number</string>
    <string name="cust_mail">E-mail</string>
    <string name="cust_hour">Work hours</string>
    <string name="cust_info">Extra information</string>
    <string name="save_btn">Save</string>
    <string name="orders_btn">ORDERS</string>
    <string name="dailyoffer_btn">DAILY OFFER</string>
    <string name="profile_btn">PROFILE</string>
    <string name="add_dish">Add dish</string>
    <string name="remove_dish">Remove dish</string>
    <string name="removeAll_dish">Remove all dishes</string>
    <string name="update_dish">Update dish</string>
    <string name="move_dish">Move dish</string>
    <string name="dish_name">Name</string>
    <string name="dish_desc">Description</string>
    <string name="dish_price">Price</string>
    <string name="dish_qty">Available quantity</string>
    <string name="dish_photo">Dish photo</string>
    <string name="delete_btn">Delete</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="zero">0</string>
    <string name="select_qty">Select quantity</string>
    <string name="edit_opt">Edit</string>
    <string name="delete_opt">Delete</string>
    <string name="password">Password</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="signin_btn">SIGN IN</string>
    <string name="signout_btn">SIGN OUT</string>
    <string-array name="food_types">
        <item>Food Type</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Mexican</item>
        <item>Japanese</item>
        <item>Burgers</item>
        <item>Indian</item>
    </string-array>
</resources>
