<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:id="@+id/dish_photo_iv"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dish_photo"
        android:src="@drawable/ic_restaurant_red" />

    <EditText
        android:id="@+id/dish_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/dish_name"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/dish_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/dish_desc"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/dish_price_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/dish_price"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/dish_qty_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/dish_qty"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/save_dish_btn"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save_btn"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

</LinearLayout>
</ScrollView>