<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/chef_256" />

        <Button
            android:id="@+id/add_image_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignEnd="@id/avatar"
            android:layout_alignBottom="@+id/avatar"
            android:layout_gravity="bottom|end"
            android:background="@drawable/circle"
            android:clickable="true"
            android:drawableTop="@mipmap/icons8_add_image_36"
            android:elevation="4dp"
            android:focusable="true"
            android:paddingTop="10dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/cust_name"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/cust_addr"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/tel_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/cust_tel"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/mail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/cust_mail"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/hour_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/cust_hour"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/info_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/cust_info"
        android:layout_marginTop="25dp"
        />
    <Button
        android:id="@+id/avatar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>
    </LinearLayout>

</ScrollView>