<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dishes_rView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/add_dish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:text="@string/add_dish"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/remove_dish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/remove_dish"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/removeAll_dish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="330dp"
        android:gravity="center"
        android:text="@string/removeAll_dish"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/update_dish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/update_dish"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/move_dish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="430dp"
        android:gravity="center"
        android:text="@string/move_dish"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

</RelativeLayout>