<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dish_photo_iv"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/dish_photo"
                android:src="@mipmap/paella_256" />

            <Button
                android:id="@+id/add_image_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom|end"
                android:layout_alignEnd="@id/dish_photo_iv"
                android:layout_alignBottom="@+id/dish_photo_iv"
                android:background="@drawable/circle"
                android:clickable="true"
                android:focusable="true"
                android:drawableTop="@mipmap/icons8_add_image_36"
                android:elevation="4dp"
                android:paddingTop="10dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/dish_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/dish_name"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <EditText
            android:id="@+id/dish_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/dish_desc"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <com.blackcat.currencyedittext.CurrencyEditText
            android:id="@+id/dish_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint=""
            android:textColor="#808080"
            android:inputType="number"
            android:maxLength="12"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:allow_negative_values="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="130dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="Select Quantitiy" />

            <TextView
                android:id="@+id/dish_qty_et"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="49dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/zero" />

            <ImageButton
                android:id="@+id/plus_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/plus_green" />

            <ImageButton
                android:id="@+id/negative_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="98dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/negative_red" />
        </RelativeLayout>

        <!--<EditText
            android:id="@+id/dish_qty_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:hint="@string/dish_qty"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/delete_dish_btn"
                android:layout_width="140dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="195dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/delete_btn"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <Button
                android:id="@+id/save_dish_btn"
                android:layout_width="142dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="193dp"
                android:layout_marginBottom="13dp"
                android:gravity="center"
                android:text="@string/save_btn"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>